[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/button-actions.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 384.0
margin_top = 24.0
margin_right = 630.0
margin_bottom = 144.0
text = "Porta da loja"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 572.0
margin_top = 312.0
margin_right = 802.0
margin_bottom = 367.0
text = "Entrar na loja"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 213.0
margin_top = 312.0
margin_right = 443.0
margin_bottom = 367.0
text = "Procurar itens"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 30.0
margin_top = 533.0
margin_right = 195.0
margin_bottom = 582.0
text = "Voltar Menu"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="Button" method="_on_EnterStore_pressed"]
[connection signal="pressed" from="Button2" to="Button" method="_on_EnterLevelChoice_pressed"]
[connection signal="pressed" from="Button3" to="Button3" method="_on_BackMenu_pressed"]
